wp-content/themes/sydneytheme/style.css
/* ... */
      @media (min-width: 48em) {
        .contact-map-wrapper .wpgmza_sl_main_div::after {
          margin-left: -30px;
          height: 40px; } }
      @media (min-width: 70em) {
        .contact-map-wrapper .wpgmza_sl_main_div::after {
          font-size: 1.25em; } }
  .contact-map-wrapper .wpgmza-form-field__label,
  .contact-map-wrapper .wpgmza_sl_radius_div {
    display: none;
    visibility: hidden; }
  .contact-map-wrapper .wpgmza-form-field {
    width: 100%;
    max-width: 620px; }
    @media (min-width: 48em) {
      .contact-map-wrapper .wpgmza-form-field {
        width: 52%; } }
    @media (min-width: 70em) {
      .contact-map-wrapper .wpgmza-form-field {
        width: 100%; } }
  .contact-map-wrapper .wpgmza_sl_main_div input[type="button"], .contact-map-wrapper .wpgmaps_directions_outer_div input[type="button"], .contact-map-wrapper .wpgmza-inner input[type="button"] {
    font-weight: 300; }
  .contact-map-wrapper .addressInput {
    font-size: 1em;
    color: #8e9192;
    height: 62px;
    margin-bottom: 24px;
    color: #424445;
    border: 3px solid #DEDEDE;
    padding: 22px;
    width: 100% !important;
    max-width: 620px; }
    .contact-map-wrapper .addressInput:-ms-input-placeholder {
      color: #767676;
      font-size: 1em;
      letter-spacing: 1.14px;
      line-height: 19px; }
    .contact-map-wrapper .addressInput::-ms-input-placeholder {
      color: #767676;
      font-size: 1em;
      letter-spacing: 1.14px;
      line-height: 19px; }
    .contact-map-wrapper .addressInput::-webkit-input-placeholder {
      color: #767676;
      font-size: 1em;
      letter-spacing: 1.14px;
      line-height: 19px; }
    .contact-map-wrapper .addressInput::-moz-placeholder {
      color: #767676;
      font-size: 1em;
      letter-spacing: 1.14px;
      line-height: 19px; }
    .contact-map-wrapper .addressInput::placeholder {
      color: #767676;
      font-size: 1em;
      letter-spacing: 1.14px;
      line-height: 19px; }
    @media (min-width: 48em) {
      .contact-map-wrapper .addressInput {
        height: 75px; } }
  .contact-map-wrapper .wpgmza_sl_search_button_3 {
    position: relative;
    background: #EB0029;
    -webkit-transition: background-color 0.7s ease;
    -o-transition: background-color 0.7s ease;
    transition: background-color 0.7s ease;
    color: white;
    font-size: 0.875em;
    line-height: 1.6;
    font-weight: 300;
    margin-top: 25px;
    padding: 20px 28px;
    letter-spacing: 1.2px;
    border: none; }
    @media (min-width: 48em) {
      .contact-map-wrapper .wpgmza_sl_search_button_3 {
        padding: 23px 44px;
        font-size: 1.125em;
        letter-spacing: 2.2px; } }
    @media (min-width: 70em) {
      .contact-map-wrapper .wpgmza_sl_search_button_3 {
        padding: 21px 56px;
        font-size: 1.25em; } }
    .contact-map-wrapper .wpgmza_sl_search_button_3:hover, .contact-map-wrapper .wpgmza_sl_search_button_3:focus, .contact-map-wrapper .wpgmza_sl_search_button_3:active {
      background-color: #b80020;
      cursor: pointer;
      border: none; }
  .contact-map-wrapper .wpgmza-not-found-msg.is-active {
    display: block !important;
    -webkit-box-flex: 0 !important;
        -ms-flex: 0 0 100% !important;
            flex: 0 0 100% !important;
    text-align: center !important;
    padding: 30px !important; }
  .contact-map-wrapper .wpgmza_sl_reset_button_div {
    display: none;
    visibility: hidden; }
  .contact-map-wrapper .gm-style-iw {
    padding: 10px; }
    @media (min-width: 48em) {
      .contact-map-wrapper .gm-style-iw {
        padding: 30px; } }
  .contact-map-wrapper .wpgmza_infowindow_title {
    font-family: "Barlow", sans-serif;
    font-weight: 300;
    font-size: 1.125em;
    line-height: 54px; }
    @media (min-width: 48em) {
      .contact-map-wrapper .wpgmza_infowindow_title {
        font-size: 1.75em; } }
  .contact-map-wrapper .wpgmza_infowindow_address,
  .contact-map-wrapper .wpgmza_infowindow_description {
    font-family: "Barlow", sans-serif;
    font-size: 0.875em; }
    @media (min-width: 48em) {
      .contact-map-wrapper .wpgmza_infowindow_address,
      .contact-map-wrapper .wpgmza_infowindow_description {
        font-size: 1em; } }
  .contact-map-wrapper .wpgmza_infowindow_address {
    position: relative;
    padding-left: 32px; }
    .contact-map-wrapper .wpgmza_infowindow_address::before {
      content: " ";
      background-image: url("data:image/svg+xml,%3Csvg width='12' height='17' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ED1C24' fill-rule='evenodd'%3E%3Cpath d='M10.296 8.527l-4.22 7.018-4.33-6.95a4.96 4.96 0 0 1-.753-2.618C.993 3.23 3.243.989 6 .989c2.757 0 5.003 2.241 5.003 4.988 0 .9-.247 1.782-.707 2.55M6 0C2.692 0 0 2.681 0 5.977c0 1.113.31 2.2.896 3.142l4.762 7.646a.5.5 0 0 0 .425.235h.004a.5.5 0 0 0 .425-.242l4.642-7.72A5.952 5.952 0 0 0 12 5.978C12 2.68 9.308 0 6 0'/%3E%3Cpath d='M6 8.642c-1.035 0-1.873-.972-1.873-2.166 0-1.19.844-2.166 1.873-2.166 1.03 0 1.87.976 1.87 2.166 0 1.176-.819 2.166-1.87 2.166m0-5.404c-1.544 0-2.8 1.453-2.8 3.238C3.2 8.25 4.436 9.714 6 9.714c1.584 0 2.8-1.483 2.8-3.238 0-1.785-1.256-3.238-2.8-3.238'/%3E%3C/g%3E%3C/svg%3E");
      position: absolute;
      left: 2px;
      top: 0;
      height: 18px;
      width: 12px;
      background-repeat: no-repeat; }
  .contact-map-wrapper .wpgmza_infowindow_description {
    padding: 3px; }
    .contact-map-wrapper .wpgmza_infowindow_description li {
      padding-top: 9px; }
      @media (min-width: 70em) {
        .contact-map-wrapper .wpgmza_infowindow_description li {
          padding-top: 14px; } }
    .contact-map-wrapper .wpgmza_infowindow_description li:first-child {
      position: relative;
      padding-left: 32px; }
/* ... */

